bigin make client v3

--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -10,16 +10,16 @@
         <form>
             <div class="example-container">
                 <div class="template-example">
-                    <span>JavaScript function template - </span>
-                    <span>function NAME (ONE-PARAM-NAME) {return [js code that return number]}</span>
+                    <span class="first-part-of-example">JavaScript function template - </span>
+                    <span class="second-part-of-example">function NAME (ONE-PARAM-NAME) {return [js code that return number]}</span>
                 </div>
                 <div class="first-example">
-                    <span>You can use this example for first function - </span>
-                    <span>function calc (n) {return 2*n+(3-6)/8}</span>
+                    <span class="first-part-of-example">>You can use this example for first function - </span>
+                    <span class="second-part-of-example">function calc (n) {return 2*n+(3-6)/8}</span>
                 </div>
                 <div class="second-example">
-                    <span>You can use this example for second function - </span>
-                    <span>function calc (n) {return 2*n+(3-6)/8}</span>
+                    <span class="first-part-of-example">>You can use this example for second function - </span>
+                    <span class="second-part-of-example">function calc (n) {return 2*n+(3-6)/8}</span>
                 </div>
             </div>
 
@@ -49,7 +49,8 @@
         </form>
     </div>
     <div class="report-container">
-
+        <h1>Report</h1>
+        <div class="report-sticker"></div>
     </div>
 <script src="https://unpkg.com/can-ndjson-stream@0.1.6/dist/global/can-ndjson-stream.js"></script>
 <script src="./webclient.js"></script>
