--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Stream Demo</title>
+    <title>Stream Demooo</title>
 </head>
 <body>
     <div class="form-container">
