--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -45,14 +45,16 @@
                 </select>
             </div>
 
-            <button type="button" class="get-report-button">Get report</button>
+            <div class="form-buttons">
+                <button type="button"  class="get-report-button">Get report</button>
+                <button type="button"  class="reset-report-button">Reset report</button>
+            </div>
         </form>
     </div>
     <div class="report-container">
         <h1>Report</h1>
         <div class="report-sticker"></div>
     </div>
-<script src="https://unpkg.com/can-ndjson-stream@0.1.6/dist/global/can-ndjson-stream.js"></script>
-<script src="./webclient.js"></script>
+<script src="webclientt.js"></script>
 </body>
 </html>
