--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Stream Demooo</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="form-container">
@@ -53,7 +54,7 @@
     </div>
     <div class="report-container">
         <h1>Report</h1>
-        <div class="report-sticker"></div>
+        <table class="report-table"></table>
     </div>
 <script src="webclientt.js"></script>
 </body>
