--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Stream Demooo</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="indexx.css">
 </head>
 <body>
 <div class="form-container">
@@ -12,11 +12,13 @@
         <div class="example-container">
             <div class="template-example">
                 <span class="first-part-of-example">JavaScript function template - </span>
-                <span class="second-part-of-example">function NAME (ONE-PARAM-NAME) {return [js code that return number]}</span>
+                <span class="second-part-of-example">function NAME (ONE-PARAM-NAME) {return [js code that return number]}
+                    <span class="important-msg"> (!don't use let or const in the function, instead use var!) </span>
+                </span>
             </div>
             <div class="first-example">
                 <span class="first-part-of-example">You can use this example for first function - </span>
-                <span class="second-part-of-example">function calc (n) {return 2*n+(3-6)/8}</span>
+                <span class="second-part-of-example">function calc (n) {var res = 0; for(var i=0; i<1000000000; i++) {res = res +  (i*n*n*n*n)/n}return res}</span>
             </div>
             <div class="second-example">
                 <span class="first-part-of-example">You can use this example for second function - </span>
@@ -58,6 +60,6 @@
     <h1>Report</h1>
     <table class="report-table"></table>
 </div>
-<script src="index.js"></script>
+<script src="indexx.js"></script>
 </body>
 </html>
